# tsmart

./: LICENSE  README.md  pyproject.toml
src/tsmart/: __init__.py  tsmart.py
