[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsmart"
version = "0.1.0"
authors = [
  { name="Paul Warren", email="pdw@ex-parrot.com" },
]
description = "Library for accessing T-Smart thermostats"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio-dgram",
]

[project.urls]
"Homepage" = "https://github.com/pdw-mb/tsmart"
"Bug Tracker" = "https://github.com/pdw-mb/tsmart/issues"
